--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@types/react-helmet": "^6.1.0",
+    "@types/tailwindcss": "^2.0.2",
     "autoprefixer": "^10.2.5",
     "gatsby-plugin-postcss": "^4.1.0",
     "postcss": "^8.2.8",
